           Fixes at least two Qt4-based external-ui synths (synthv1, drumk) crashing.
           See corresponding UI dlopen call in LV2Synth::lv2ui_ShowNativeGui() 
            for a similar fix and test results (better but the UI still CRASHES here).
           No other such plugins were found, in order to test this fix further...
21.03.2016:
        * New Plugin Path editor in Global Settings: (Tim)
          The LADSPA_PATH DSSI_PATH VST_PATH LINUX_VST_PATH and LV2_PATH environment variables
           are now read only ONCE upon first-time run, to fill the Global Settings boxes.
          Afterwards these variables are SET (internally) by MusE at each startup, from the 
           paths in the Global Settings boxes, so that the various plugin systems can find plugins.
          (Actually, LV2 /required/ setting LV2_PATH since we use the recommended lilv_world_load_all,
           and there doesn't seem to be any other way to set the paths programmatically in that case.)
        - Updated -h help text to reflect changes.
21.03.2016:
        - LV2 fix: Support PowerOf2BlockLength - Was missing! Supports more plugins! (Tim)
        - LV2 fix: Support FixedBlockLength - Our process routines weren't respecting this! (Tim)
                   If any controller input was adjusted, a plugin would 'gurgle' or might soon CRASH.
        - LV2: Add debugging output (-D option) while discovering plugins. (Tim)
        - LV2: Report if a plugin is ignored due to any unsupported 'required feature'. (Tim)
        
          Tested OK! With MOD Pitch Shifter series of plugins (they require fixed-block AND power-of-2).
          At both 1024 and 128 block size, these plugins' controllers responded smoothly, both with
           rapid manual adjustment and graphs, and did not 'gurgle' and did not crash after much abuse.
           
19.03.2016:
        - Fix toolbars initial positions in all windows. They were all on one line. (Tim)