@@ -4,6 +4,7 @@
            See corresponding UI dlopen call in LV2Synth::lv2ui_ShowNativeGui() 
             for a similar fix and test results (better but the UI still CRASHES here).
            No other such plugins were found, in order to test this fix further...
+         - LV2: Fix very slow right-click synth 'presets' menu with many items (ex. amsynth). (Tim)
 21.03.2016:
         * New Plugin Path editor in Global Settings: (Tim)
           The LADSPA_PATH DSSI_PATH VST_PATH LINUX_VST_PATH and LV2_PATH environment variables
